# FAIRMeta

./: .env.example  .env.example.txt  .gitignore  README.md  config_example.yaml  main.py  mappings.py  metadata_model.py  pyproject.toml  requirements.txt  requirements_detailed.txt  schema_definitions_hri.py  tests.py  uploader_radboudfdp.py
gatherers/: gather_GC.py
src/fairmeta/: __init__.py  __main__.py  main.py  mappings.py  metadata_model.py  schema_definitions_hri.py  uploader_radboudfdp.py
src/fairmeta/gatherers/: __init__.py  gather_GC.py
tests/: conftest.py  test_api.py  test_metadatarecord.py  test_utils.py  tests.py
