[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "fairmeta"
version = "0.0.1"
dependencies = [
    "dotenv",
    "gcapi",
    "pydantic",
    "pyyaml",
    "requests",
    "sempyro"
]
requires-python = ">=3.10"
authors = [
    {name = "Yme Kingma", email = "yme.kingma@radboudumc.nl"}
]
description = "fairmeta"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["nothing yet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.optional-dependencies]
tests = [
    "pytest"
]

[project.urls]
Homepage = "https://github.com/YKingma99/FAIRMeta"
Issues = "https://github.com/YKingma99/FAIRMeta/issues"

[tool.hatch.build]
packages = ["src/fairmeta"]